# EvaluateDelta

./: EvaluateLWS.py  README.md  myFunc.py  preprocessCSV.py  pyproject.toml
MATLAB/: data (1).csv  hoge_act.csv  myMATLAB.mlx
TokyoResults/: 250710_TokyoResults_delta.pptx  delta_Demand_Tokyo.csv  delta_ResidulDemand_Tokyo.csv
mics/: outliers.txt  preprocessCSV.py
misc_solar/: edft_2024FY_met_delta.ipynb
